--- a/POP-SF22-2016-GUI/POP-SF22-2016-GUI/GUI/MainPrikaz.xaml
+++ b/POP-SF22-2016-GUI/POP-SF22-2016-GUI/GUI/MainPrikaz.xaml
@@ -17,10 +17,10 @@
                 <ColumnDefinition Width="*"></ColumnDefinition>
                 <ColumnDefinition Width="*"></ColumnDefinition>
             </Grid.ColumnDefinitions>
-            <Button Name="btNamestaji" Content="Namestaji" Grid.Column="0" Height="40"></Button>
-            <Button Name="btAkcije" Content="Akcije" Grid.Column="1" Height="40"></Button>
-            <Button Click="btKorisnici_Click" Name="btKorisnici" Content="Korisnici" Grid.Column="2" Height="40"></Button>
-            <Button Name="btTipoviNamestaja" Content="Tipovi Namestaja" Grid.Column="3" Height="40"></Button>
+            <Button Click="btnNamestaji_Click" Name="btnNamestaji" Content="Namestaji" Grid.Column="0" Height="40"></Button>
+            <Button Click="btnAkcije_Click" Name="btnAkcije" Content="Akcije" Grid.Column="1" Height="40"></Button>
+            <Button Click="btnKorisnici_Click" Name="btnKorisnici" Content="Korisnici" Grid.Column="2" Height="40"></Button>
+            <Button Click="btnTipoviNamestaja_Click" Name="btnTipoviNamestaja" Content="Tipovi Namestaja" Grid.Column="3" Height="40"></Button>
         
         </Grid>
 
@@ -38,18 +38,10 @@
                 <ColumnDefinition Width="*"></ColumnDefinition>
                 <ColumnDefinition Width="*"></ColumnDefinition>
             </Grid.ColumnDefinitions>
-            <Button Name="btDodaj" Content="Dodaj" Grid.Column="0" Height="40" Margin="0 10 0 10"></Button>
-            <Button Name="btIzmeni" Content="Izmeni" Grid.Column="1" Height="40" Margin="0 10 0 10"></Button>
-            <Button Name="btIzbrisi" Content="Izbrisi" Grid.Column="2" Height="40" Margin="0 10 0 10"></Button>
-            <Button Click="btNazad_Click" Name="btNazad" Content="Nazad" Grid.Column="3" Height="40" Margin="0 10 0 10"></Button>
+            <Button Click="btnDodaj_Click" Name="btnDodaj" Content="Dodaj" Grid.Column="0" Height="40" Margin="0 10 0 10"></Button>
+            <Button Click="btnIzmeni_Click" Name="btnIzmeni" Content="Izmeni" Grid.Column="1" Height="40" Margin="0 10 0 10"></Button>
+            <Button Click="btnIzbrisi_Click" Name="btnIzbrisi" Content="Izbrisi" Grid.Column="2" Height="40" Margin="0 10 0 10"></Button>
+            <Button Click="btnLogout_Click" Name="btnLogout" Content="Logout" Grid.Column="3" Height="40" Margin="0 10 0 10"></Button>
         </Grid>
-
-       
-        
-        
-        
-        
-        
-        
     </StackPanel>
 </Window>
